--- a/app/components/Navbar/Navbar.module.css
+++ b/app/components/Navbar/Navbar.module.css
@@ -3,31 +3,70 @@
   left: 0;
   bottom: 0;
   top: 0;
-  background-color: var(--primary-color);
+  height: 100%;
+  background-color: var(--card-color);
   display: flex;
   flex-direction: column;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  transform: translateX(-100%);
+  animation: slide-in 0.2s ease forwards;
+  transition: transform 0.2s ease;
+  will-change: transform;
+  padding-top: 5rem;
+  padding-bottom: 2rem;
+  z-index: 20;
+  box-shadow: var(--card-box-shadow);
 }
 
-.navbar .section-list .sections:not(:last-child)::after {
-  content: "";
-  display: block;
-  height: 1px;
-  width: 100%;
-  background-color: var(--text-color-secondary);
-  margin: 1rem 0;
+@keyframes slide-in {
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.navbar .menu {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.navbar .sections {
+  will-change: transform;
+  animation: grow 0.3s forwards ease;
+  transform: scale(0);
+}
+
+.navbar .sections:last-child {
+  margin-top: auto;
+  margin-bottom: 0;
 }
 
 .navbar .links {
-  color: var(--text-color-light);
+  position: relative;
+  color: var(--primary-color);
+  opacity: 0.75;
   text-align: center;
-  padding: 1rem;
-  transition: color 0.2s ease, transform 0.2s ease;
+  padding: 1.2rem;
+  transition: color 0.2s ease;
   will-change: transform;
+  animation: grow 0.2s forwards ease-in-out;
+  transform: scale(0);
+}
+
+@keyframes grow {
+  100% {
+    transform: scale(1);
+  }
 }
 
 .navbar .links:hover {
-  color: var(--secondary-color);
-  transform: skew(-10deg);
+  color: var(--primary-color);
+}
+
+.navbar .links:hover svg {
+  filter: drop-shadow(0 0 0.5rem var(--primary-color)) brightness(1.2) saturate(1.2) contrast(1.2);
 }
 
 .navbar .links a {
@@ -35,6 +74,7 @@
 }
 
 .navbar .links svg {
-  height: 2.4rem;
-  transition: fill 0.2s ease;
+  height: 2.5rem;
+  width: 2.5rem;
+  transition: fill 0.2s ease-in-out, filter 0.2s ease-in-out;
 }
