--- a/app/globals.css
+++ b/app/globals.css
@@ -1,21 +1,25 @@
 :root {
-  --primary-color: #6738e8;
+  --primary-color: #8639e4;
   --secondary-color: #df4496;
   --tertiary-color: #dfb145;
-  --background-color: #f5f5f5;
-  --text-color: #333333;
+  --background-color: #fcf3fe;
+  --card-color: #fffbff;
+  --card-box-shadow: 10px 10px 10px rgba(180, 121, 212, 0.15);
+  --text-color: #1d1620;
   --text-color-light: #f2f2f2;
   --text-color-dark: #1a1a1a;
-  --text-color-secondary: #999999;
+  --text-color-secondary: #9a929e;
   --text-color-tertiary: #666666;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --primary-color: #6738e8;
+    --primary-color: #8738e8;
     --secondary-color: #df4496;
     --tertiary-color: #dfb145;
-    --background-color: #1a1a1a;
+    --background-color: #f9f1fe;
+    --card-color: #fefbff;
+    --card-box-shadow: 10px 0 40px rgba(212, 159, 240, 0.15);
     --text-color: #f2f2f2;
     --text-color-light: #f2f2f2;
     --text-color-dark: #1a1a1a;
@@ -36,13 +40,15 @@ html {
 
 html,
 body {
-  max-width: 100vw;
+  height: 100%;
+  width: 100%;
   overflow-x: hidden;
 }
 
 body {
   font-size: 1.6rem;
   display: flex;
+  background-color: var(--background-color);
 }
 
 a {
@@ -57,13 +63,37 @@ a {
 }
 
 main {
+  position: relative;
+  margin-top: 5rem;
+  margin-left: 8rem;
+  margin-right: 3rem;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
 }
 
 ul {
   list-style: none;
+}
+
+.title {
+  color: var(--text-color);
+  font-size: 3.2rem;
+  font-weight: bold;
+  margin-bottom: 2rem; 
+}
+
+p {
+  color: var(--text-color-secondary);
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  margin-bottom: 2rem;
+}
+
+.subtitle {
+  color: var(--text-color);
+  font-size: 2.4rem;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
 }
