--- a/app/components/Card/Card.module.css
+++ b/app/components/Card/Card.module.css
@@ -1,11 +1,20 @@
 .card {
     position: relative;
-    padding: 1rem 2rem 2rem;
+    padding: 1.5rem 2rem 2rem;
     width: 100%;
-    height: 100%;
     border-radius: 10px;
     box-shadow: var(--card-box-shadow);
     background-color: var(--card-color);
     transition: all 0.3s ease;
     text-align: left;
+    animation: card-swipe 0.3s ease forwards;
+    opacity: 0;
+    transform: translateX(200%);
+}
+
+@keyframes card-swipe {
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
 }
