--- a/app/components/Logo/Logo.module.css
+++ b/app/components/Logo/Logo.module.css
@@ -1,6 +1,6 @@
 .logo {
   font-size: 1.2rem;
   text-align: center;
-  color: var(--primary-color);
-  margin-bottom: 2rem;
+  color: var(--text-color) ;
+  margin-bottom: 5rem;
 }
