--- a/app/components/Navbar/Navbar.module.css
+++ b/app/components/Navbar/Navbar.module.css
@@ -14,6 +14,8 @@
   transition: transform 0.2s ease;
   will-change: transform;
   padding-top: 5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
   padding-bottom: 2rem;
   z-index: 20;
   box-shadow: var(--card-box-shadow);
@@ -45,11 +47,11 @@
 
 .navbar .links {
   position: relative;
-  color: var(--primary-color);
+  color: var(--text-color);
   opacity: 0.75;
   text-align: center;
-  padding: 1.2rem;
   transition: color 0.2s ease;
+  margin-bottom: 1.5rem;
   will-change: transform;
   animation: grow 0.2s forwards ease-in-out;
   transform: scale(0);
@@ -74,7 +76,7 @@
 }
 
 .navbar .links svg {
-  height: 2.5rem;
-  width: 2.5rem;
+  height: 2rem;
+  width: 2rem;
   transition: fill 0.2s ease-in-out, filter 0.2s ease-in-out;
 }
