--- a/app/components/Card/Card.module.css
+++ b/app/components/Card/Card.module.css
@@ -2,7 +2,7 @@
     position: relative;
     padding: 1.5rem 2rem 2rem;
     width: 100%;
-    border-radius: 10px;
+    border-radius: 2rem;
     box-shadow: var(--card-box-shadow);
     background-color: var(--card-color);
     transition: all 0.3s ease;
