--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
   --quinary-color: #1B9AAA;
   --background-color: #f8f9ff;
   --card-color: #ffffff;
-  --card-box-shadow: 4px 4px 5px rgba(231, 69, 163, 0.05);
+  --card-box-shadow: 4px 4px 20px rgba(231, 69, 163, 0.15);
   --text-color: #20161e;
   --text-color-light: #f2f2f2;
   --text-color-dark: #28232a;
@@ -16,20 +16,20 @@
   --text-color-tertiary: #666666;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --primary-color: #8738e8;
-    --secondary-color: #df4496;
-    --tertiary-color: #dfb145;
-    --background-color: #f9f1fe;
-    --card-color: #fefbff;
-    --card-box-shadow: 1px 0 1px rgba(212, 159, 240, 0.15);
-    --text-color: #f2f2f2;
-    --text-color-light: #f2f2f2;
-    --text-color-dark: #1a1a1a;
-    --text-color-secondary: #999999;
-    --text-color-tertiary: #666666;
-  }
+.dark-theme {
+  --primary-color: #df4496;
+  --secondary-color: #561b5d;
+  --tertiary-color: #dfb145;
+  --quaternary-color: #002500;
+  --quinary-color: #1B9AAA;
+  --background-color: #20161e;
+  --card-color: #28232a;
+  --card-box-shadow: 4px 4px 20px rgba(231, 69, 163, 0.15);
+  --text-color: #f2f2f2;
+  --text-color-light: #f2f2f2;
+  --text-color-dark: #28232a;
+  --text-color-secondary: #79737c;
+  --text-color-tertiary: #666666;
 }
 
 * {
