--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,3 +1,7 @@
+.home section {
+ margin-bottom: 2rem;
+}
+
 .home .metrics {
   display: grid;
   place-items: center;
@@ -14,10 +18,6 @@
 .home .metrics p,
 .home .metrics h2 {
   color: var(--text-color-light);
-}
-
-.welcome {
-  margin-bottom: 2rem;
 }
 
 @media (min-width: 768px) {
