Finished the chart

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
   --text-color-tertiary: #666666;
 }
 
-.dark-theme {
+.dark {
   --primary-color: #df4496;
   --secondary-color: #561b5d;
   --tertiary-color: #dfb145;
