--- a/styles/main.css
+++ b/styles/main.css
@@ -195,4 +195,41 @@ p {
   100% {
     transform: scale(1);
   }
+}
+.dashboard {
+  width: 100%;
+}
+
+.overall-metrics {
+  margin-bottom: 2rem;
+  width: 100%;
+  display: block;
+}
+.overall-metrics__list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: clamp(1rem, 2vw, 2rem);
+  width: 100%;
+}
+.overall-metrics__item div {
+  min-height: 10rem;
+  height: 20vh;
+  max-height: 15rem;
+}
+.overall-metrics__item p,
+.overall-metrics__item .metric-data {
+  color: var(--text-color-light);
+}
+.overall-metrics__item .metric-data {
+  font-size: clamp(2rem, 4vw, 2.8rem);
+}
+
+.monthlyreservations {
+  margin-bottom: 2rem;
+  width: 100%;
+}
+.monthlyreservations .card {
+  width: 100%;
+  height: 100%;
+  padding: 2rem;
 }/*# sourceMappingURL=main.css.map */
