--- a/styles/dashboard/_chart.scss
+++ b/styles/dashboard/_chart.scss
@@ -1,9 +1,16 @@
 .monthlyreservations {
-  margin-bottom: 2rem;
+  margin-bottom: 5rem;
   width: 100%;
   .card {
     width: 100%;
     height: 100%;
     padding: 2rem;
+    animation-delay: 1.5s;
+    .recharts-responsive-container,
+    .recharts-wrapper,
+    svg {
+      width: 100% !important;
+      height: 100% !important;
+    }
   }
 }
