--- a/styles/dashboard/_metrics.scss
+++ b/styles/dashboard/_metrics.scss
@@ -1,28 +1,27 @@
 .overall-metrics {
-  margin-bottom: 2rem;
+  margin-bottom: 5rem;
   width: 100%;
   display: block;
 
   &__list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: clamp(1rem, 2vw, 2rem);
+    gap: clamp(1.5rem, 2vw, 2rem);
     width: 100%;
   }
 
   &__item {
     div {
-      min-height: 10rem;
-      height: 20vh;
-      max-height: 15rem;
+      height: clamp(11rem, 15vw, 12rem);
     }
     p,
     .metric-data {
       color: var(--text-color-light);
+      font-size: clamp(1rem, 2vw, 1.5rem);
     }
 
     .metric-data {
-      font-size: clamp(2rem, 4vw, 2.8rem);
+      font-size: clamp(2rem, 5vw, 3rem);
     }
   }
 }
