--- a/styles/dashboard/_chart.scss
+++ b/styles/dashboard/_chart.scss
@@ -1,11 +1,19 @@
 .monthlyreservations {
   margin-bottom: 5rem;
   width: 100%;
+
+  .title {
+    margin-bottom: 2rem;
+    animation: text-appear 0.3s ease forwards;
+    opacity: 0;
+    transform: translateY(2rem);
+    animation-delay: 1s;
+  }
   .card {
     width: 100%;
     height: 100%;
     padding: 2rem;
-    animation-delay: 1.5s;
+    animation-delay: 1.2s;
     .recharts-responsive-container,
     .recharts-wrapper,
     svg {
