--- a/styles/main.css
+++ b/styles/main.css
@@ -96,6 +96,22 @@ p {
   margin-bottom: clamp(0.5rem, 1vw, 1rem);
 }
 
+@keyframes card-swipe {
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+@keyframes text-appear {
+  0% {
+    transform: translateY(2rem);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 .card {
   position: relative;
   padding: 1.5rem 2rem 2rem;
@@ -110,12 +126,6 @@ p {
   transform: translateX(200%);
 }
 
-@keyframes card-swipe {
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
 .logo {
   font-size: 1.2rem;
   text-align: center;
@@ -201,6 +211,9 @@ p {
 }
 .dashboard__title {
   margin-bottom: 2rem;
+  animation: text-appear 0.3s ease forwards;
+  opacity: 0;
+  transform: translateY(2rem);
 }
 
 .overall-metrics {
@@ -230,15 +243,87 @@ p {
   margin-bottom: 5rem;
   width: 100%;
 }
+.monthlyreservations .title {
+  margin-bottom: 2rem;
+  animation: text-appear 0.3s ease forwards;
+  opacity: 0;
+  transform: translateY(2rem);
+  animation-delay: 1s;
+}
 .monthlyreservations .card {
   width: 100%;
   height: 100%;
   padding: 2rem;
-  animation-delay: 1.5s;
+  animation-delay: 1.2s;
 }
 .monthlyreservations .card .recharts-responsive-container,
 .monthlyreservations .card .recharts-wrapper,
 .monthlyreservations .card svg {
   width: 100% !important;
   height: 100% !important;
+}
+
+.recent {
+  margin-bottom: 5rem;
+}
+.recent .title {
+  margin-bottom: 2rem;
+  animation: text-appear 0.3s ease forwards;
+  opacity: 0;
+  transform: translateY(2rem);
+  animation-delay: 1.8s;
+}
+.recent .card {
+  animation-delay: 2.1s;
+  padding: clamp(2rem, 2vw, 3.5rem);
+}
+.recent__list {
+  display: grid;
+}
+.recent__item {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  place-items: start;
+  font-size: clamp(1rem, 3vw, 1.4rem);
+  padding: clamp(1rem, 2vw, 1.5rem);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+.recent__item:nth-child(odd) {
+  background-color: var(--background-color);
+}
+.recent__item--header * {
+  font-weight: bold;
+  font-size: clamp(1.6rem, 4vw, 2rem);
+}
+.recent__item:hover:not(:first-child) {
+  transform: scale(1.02);
+  box-shadow: var(--card-box-shadow);
+  cursor: pointer;
+}
+
+.calendar {
+  margin-bottom: 2rem;
+}
+.calendar-day__number {
+  padding: 5rem;
+  background-color: white;
+}
+
+.calendar-month__header {
+  display: flex;
+  margin-bottom: 1rem;
+  padding: 0 1rem;
+}
+.calendar-month__header > * {
+  flex: 1;
+  text-align: center;
+}
+.calendar-month__weekdays {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+}
+.calendar-month__days {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-auto-rows: 1fr;
 }/*# sourceMappingURL=main.css.map */
