Started calendar impl

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,6 +16,7 @@
   --text-color-dark: #28232a;
   --text-color-secondary: #79737c;
   --text-color-tertiary: #666666;
+  --calendar-outline-color: #20161e;
 }
 
 .dark {
