--- a/styles/calendar/_index.scss
+++ b/styles/calendar/_index.scss
@@ -1,9 +1,35 @@
 .calendar {
   margin-bottom: 2rem;
+  &__header {
+    margin-bottom: 2rem;
+  }
   &-day {
     &__number {
-      padding: 5rem;
-      background-color: white;
+      background-color: var(--card-color);
+      font-size: 1rem;
+      height: clamp(7.5rem, 10vw, 10rem);
+      padding: clamp(0.5rem, 2vw, 2.5rem);
+    }
+  }
+  &-weekday {
+    color: var(--text-color-light);
+    text-align: center;
+    font-weight: bold;
+    font-size: clamp(1rem, 2vw, 1.6rem);
+    padding: clamp(1rem, 1vw, 1.5rem);
+    &--tablet {
+      display: none;
+    }
+  }
+}
+
+@include tablet {
+  .calendar {
+    &-weekday {
+      display: none;
+      &--tablet {
+        display: block;
+      }
     }
   }
 }
@@ -11,22 +37,41 @@
 .calendar-month {
   &__header {
     display: flex;
-    margin-bottom: 1rem;
-    padding: 0 1rem;
+    margin-bottom: 2rem;
+    align-items: center;
+    justify-content: space-between;
     > * {
       flex: 1;
       text-align: center;
+    }
+    &__title {
+      font-size: clamp(1.6rem, 3vw, 2.4rem);
+      flex: 2;
+    }
+    &__btn {
+      background: none;
+      border: none;
+      font-size: clamp(3rem, 5vw, 4rem);
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 
   &__weekdays {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
+    background-image: linear-gradient(
+      to right,
+      var(--primary-color) 0%,
+      var(--secondary-color) 50%
+    );
   }
 
   &__days {
+    position: relative;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    grid-auto-rows: 1fr;
+    border-left: 0.1rem solid var(--calendar-outline-color);
   }
 }
