--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,7 @@
   --text-color-dark: #28232a;
   --text-color-secondary: #79737c;
   --text-color-tertiary: #666666;
+  --calendar-outline-color: #20161e;
 }
 
 .dark {
@@ -304,26 +305,64 @@ p {
 .calendar {
   margin-bottom: 2rem;
 }
+.calendar__header {
+  margin-bottom: 2rem;
+}
 .calendar-day__number {
-  padding: 5rem;
-  background-color: white;
+  background-color: var(--card-color);
+  font-size: 1rem;
+  height: clamp(7.5rem, 10vw, 10rem);
+  padding: clamp(0.5rem, 2vw, 2.5rem);
+}
+.calendar-weekday {
+  color: var(--text-color-light);
+  text-align: center;
+  font-weight: bold;
+  font-size: clamp(1rem, 2vw, 1.6rem);
+  padding: clamp(1rem, 1vw, 1.5rem);
+}
+.calendar-weekday--tablet {
+  display: none;
 }
 
+@media (min-width: 768px) {
+  .calendar-weekday {
+    display: none;
+  }
+  .calendar-weekday--tablet {
+    display: block;
+  }
+}
 .calendar-month__header {
   display: flex;
-  margin-bottom: 1rem;
-  padding: 0 1rem;
+  margin-bottom: 2rem;
+  align-items: center;
+  justify-content: space-between;
 }
 .calendar-month__header > * {
   flex: 1;
   text-align: center;
 }
+.calendar-month__header__title {
+  font-size: clamp(1.6rem, 3vw, 2.4rem);
+  flex: 2;
+}
+.calendar-month__header__btn {
+  background: none;
+  border: none;
+  font-size: clamp(3rem, 5vw, 4rem);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .calendar-month__weekdays {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
+  background-image: linear-gradient(to right, var(--primary-color) 0%, var(--secondary-color) 50%);
 }
 .calendar-month__days {
+  position: relative;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  grid-auto-rows: 1fr;
+  border-left: 0.1rem solid var(--calendar-outline-color);
 }/*# sourceMappingURL=main.css.map */
