Added calendar button

--- a/styles/_card.scss
+++ b/styles/_card.scss
@@ -3,7 +3,7 @@
   padding: 1.5rem 2rem 2rem;
   width: 100%;
   border-radius: 2rem;
-  box-shadow: var(--card-box-shadow);
+  box-shadow: var(--box-shadow);
   background-color: var(--card-color);
   transition: all 0.3s ease;
   text-align: left;
