--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -18,7 +18,7 @@
   padding-right: 1rem;
   padding-bottom: 2rem;
   z-index: 20;
-  box-shadow: var(--card-box-shadow);
+  box-shadow: var(--box-shadow);
 
   &__main-list {
     position: relative;
