--- a/styles/main.css
+++ b/styles/main.css
@@ -132,10 +132,6 @@ p {
   box-shadow: var(--box-shadow);
   background-image: linear-gradient(to left top, var(--primary-color) 0%, var(--secondary-color) 80%);
 }
-.btn--add:hover {
-  background-image: linear-gradient(to right, var(--primary-color) 0%, var(--secondary-color) 20%);
-}
-
 .card {
   position: relative;
   padding: 1.5rem 2rem 2rem;
@@ -332,10 +328,11 @@ p {
   margin-bottom: 2rem;
 }
 .calendar-day__number {
-  background-color: var(--card-color);
+  position: relative;
   font-size: clamp(1rem, 2vw, 1.6rem);
   height: clamp(7.5rem, 10vw, 17rem);
   padding: clamp(0.5rem, 2vw, 2.5rem);
+  background-color: var(--card-color);
 }
 .calendar-weekday {
   color: var(--text-color-light);
@@ -379,15 +376,23 @@ p {
   cursor: pointer;
 }
 .calendar-month__weekdays {
+  position: relative;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   background-image: linear-gradient(to right, var(--primary-color) 0%, var(--secondary-color) 50%);
+  outline: 0.1rem solid var(--primary-color);
+  z-index: 1;
 }
 .calendar-month__days {
   position: relative;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  border-left: 0.1rem solid var(--calendar-outline-color);
+  gap: 0.1rem;
+}
+.calendar-month__days__day {
+  position: relative;
+  background-color: var(--card-color);
+  outline: 0.1rem solid black;
 }
 
 @media (min-width: 768px) {
