--- a/styles/calendar/_index.scss
+++ b/styles/calendar/_index.scss
@@ -73,12 +73,12 @@
     position: relative;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    gap: 0.1rem;
+    gap: 1px;
 
     &__day {
       position: relative;
       background-color: var(--card-color);
-      outline: 0.1rem solid black;
+      outline: 1px solid black;
     }
   }
 }
