Added reservation form

--- a/styles/main.css
+++ b/styles/main.css
@@ -120,6 +120,8 @@ p {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  font-size: clamp(1.4rem, 2vw, 1.6rem);
+  font-family: "Poppins", sans-serif;
 }
 .btn--add {
   position: fixed;
@@ -132,6 +134,27 @@ p {
   box-shadow: var(--box-shadow);
   background-image: linear-gradient(to left top, var(--primary-color) 0%, var(--secondary-color) 80%);
 }
+.btn--add a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.btn--add a svg {
+  display: block;
+}
+.btn--submit {
+  background-image: linear-gradient(to left top, var(--secondary-color) 0%, var(--primary-color) 80%);
+  color: white;
+  padding: clamp(1rem, 2vw, 1.5rem) clamp(2.5rem, 5vw, 3rem);
+  border-radius: 0.5rem;
+}
+.btn--cancel {
+  outline: 0.1rem solid var(--primary-color);
+  color: var(--primary-color);
+  padding: clamp(1rem, 2vw, 1.5rem) clamp(2.5rem, 5vw, 3rem);
+  border-radius: 0.5rem;
+}
+
 .card {
   position: relative;
   padding: 1.5rem 2rem 2rem;
