--- a/styles/_btn.scss
+++ b/styles/_btn.scss
@@ -5,6 +5,8 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  font-size: clamp(1.4rem, 2vw, 1.6rem);
+  font-family: "Poppins", sans-serif;
   &--add {
     position: fixed;
     bottom: clamp(2rem, 5vw, 3rem);
@@ -19,7 +21,30 @@
       var(--primary-color) 0%,
       var(--secondary-color) 80%
     );
-    &:hover {
+    a {
+      display: block;
+      width: 100%;
+      height: 100%;
+      svg {
+        display: block;
+      }
     }
+  }
+
+  &--submit {
+    background-image: linear-gradient(
+      to left top,
+      var(--secondary-color) 0%,
+      var(--primary-color) 80%
+    );
+    color: white;
+    padding: clamp(1rem, 2vw, 1.5rem) clamp(2.5rem, 5vw, 3rem);
+    border-radius: 0.5rem;
+  }
+  &--cancel {
+    outline: 0.1rem solid var(--primary-color);
+    color: var(--primary-color);
+    padding: clamp(1rem, 2vw, 1.5rem) clamp(2.5rem, 5vw, 3rem);
+    border-radius: 0.5rem;
   }
 }
