--- a/styles/_btn.scss
+++ b/styles/_btn.scss
@@ -46,5 +46,6 @@
     color: var(--primary-color);
     padding: clamp(1rem, 2vw, 1.5rem) clamp(2.5rem, 5vw, 3rem);
     border-radius: 0.5rem;
+    background-color: white;
   }
 }
