--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,8 +9,10 @@
   --quaternary-color: #002500;
   --quinary-color: #1b9aaa;
   --background-color: #f8f9ff;
+  --input-color: #ffffff;
   --card-color: #ffffff;
   --box-shadow: 4px 4px 20px rgba(231, 69, 163, 0.15);
+  --border-radius: 0.8rem;
   --text-color: #20161e;
   --text-color-light: #f2f2f2;
   --text-color-dark: #28232a;
@@ -107,3 +109,4 @@ p {
 @import "navbar";
 @import "dashboard/index";
 @import "calendar/index";
+@import "rooms/index";
