--- a/styles/rooms/_index.scss
+++ b/styles/rooms/_index.scss
@@ -1,35 +1,10 @@
 .rooms {
+  padding-bottom: 10rem;
   &__header {
     display: flex;
     flex-direction: column;
     justify-content: start;
     margin-bottom: 2rem;
-  }
-
-  &__search-bar {
-    display: inline-flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 2rem;
-    background-color: var(--input-color);
-    padding-left: 1rem;
-    padding-right: 0.5rem;
-    border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow);
-    &:focus-within {
-      outline: 1px solid var(--primary-color);
-    }
-  }
-
-  &__input {
-    flex: 1;
-    border: none;
-    background: none;
-    padding: clamp(1rem, 1vw, 1.5rem);
-    font-size: clamp(1.2rem, 2vw, 1.6rem);
-    &:focus-visible {
-      outline: none;
-    }
   }
 
   &__list {
@@ -59,7 +34,7 @@
       align-items: center;
     }
 
-    &__search-bar {
+    .search-bar {
       margin: 0;
       flex: 1;
       margin-left: 2rem;
@@ -73,7 +48,7 @@
 
 @include desktop {
   .rooms {
-    &__search-bar {
+    .search-bar {
       flex: unset;
       width: 50%;
       margin: 0 auto;
