--- a/styles/main.css
+++ b/styles/main.css
@@ -383,7 +383,7 @@ p {
 .calendar-day__number {
   position: relative;
   font-size: clamp(1rem, 2vw, 1.6rem);
-  height: clamp(7.5rem, 10vw, 17rem);
+  height: clamp(7.5rem, 10vw, 15rem);
   padding: clamp(0.5rem, 2vw, 2.5rem);
   background-color: var(--card-color);
 }
@@ -402,7 +402,7 @@ p {
 }
 
 .calendar-month {
-  max-width: 200rem;
+  max-width: 100rem;
   margin: 0 auto;
 }
 .calendar-month__header {
@@ -486,7 +486,7 @@ p {
   margin-bottom: 1rem;
 }
 .reservation__checkInDate, .reservation__checkOutDate {
-  font-size: 1.5rem;
+  font-size: clamp(1.2rem, 1.5vw, 1.5rem);
   margin-bottom: 1rem;
 }
 .reservation__checkInDate strong, .reservation__checkOutDate strong {
@@ -606,7 +606,7 @@ p {
   margin-bottom: 1rem;
 }
 .room__description {
-  font-size: 1.5rem;
+  font-size: clamp(1.2rem, 1.5vw, 1.5rem);
   margin-bottom: 1rem;
 }
 
@@ -631,6 +631,58 @@ p {
     margin: 0 auto;
   }
   .rooms__list {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+.customers {
+  padding-bottom: 10rem;
+}
+.customers__header {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  margin-bottom: 2rem;
+}
+.customers__list {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2rem;
+}
+
+.customer__title {
+  font-size: 2rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+.customer__email, .customer__phone, .customer__location {
+  font-size: clamp(1.2rem, 1.5vw, 1.5rem);
+  margin-bottom: 1rem;
+}
+.customer__email strong, .customer__phone strong, .customer__location strong {
+  display: block;
+}
+
+@media (min-width: 768px) {
+  .customers__header {
+    flex-direction: row;
+    align-items: center;
+  }
+  .customers .search-bar {
+    margin: 0;
+    flex: 1;
+    margin-left: 2rem;
+  }
+  .customers__list {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (min-width: 1025px) {
+  .customers .search-bar {
+    flex: unset;
+    width: 50%;
+    margin: 0 auto;
+  }
+  .customers__list {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }/*# sourceMappingURL=main.css.map */
