--- a/styles/main.css
+++ b/styles/main.css
@@ -588,6 +588,9 @@ p {
 .rooms {
   padding-bottom: 10rem;
 }
+.rooms__title {
+  margin-bottom: 2rem;
+}
 .rooms__header {
   display: flex;
   flex-direction: column;
@@ -685,4 +688,46 @@ p {
   .customers__list {
     grid-template-columns: 1fr 1fr 1fr;
   }
+}
+.account {
+  padding-bottom: 10rem;
+}
+.account__header {
+  margin-bottom: 2rem;
+}
+.account__title {
+  margin-bottom: 2rem;
+}
+
+@media (min-width: 1025px) {
+  .user__header,
+  .user-details {
+    width: 50%;
+    max-width: 100rem;
+    margin: 0 auto;
+  }
+}
+.user__header {
+  display: flex;
+  align-items: center;
+}
+.user__image {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.user__name {
+  flex: 1;
+  margin-left: 2rem;
+  font-weight: bold;
+}
+
+.user-details li {
+  margin-bottom: 1rem;
+  font-size: clamp(1.2rem, 1.5vw, 1.5rem);
+}
+.user-details li strong {
+  display: block;
 }/*# sourceMappingURL=main.css.map */
