--- a/styles/rooms/_index.scss
+++ b/styles/rooms/_index.scss
@@ -1,5 +1,10 @@
 .rooms {
   padding-bottom: 10rem;
+
+  &__title {
+    margin-bottom: 2rem;
+  }
+
   &__header {
     display: flex;
     flex-direction: column;
