Add customer form finished

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -108,6 +108,7 @@ p {
 @import "btn";
 @import "search-bar";
 @import "card";
+@import "form";
 @import "logo";
 @import "navbar";
 @import "dashboard/index";
