--- a/styles/main.css
+++ b/styles/main.css
@@ -199,6 +199,88 @@ p {
   transform: translateX(200%);
 }
 
+.form__group {
+  margin-bottom: 1rem;
+}
+.form__group label {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-size: clamp(1.4rem, 2vw, 1.6rem);
+  font-weight: bold;
+  color: var(--text-color);
+}
+.form__group input:not([type=checkbox]),
+.form__group textarea,
+.form__group select {
+  width: 100%;
+  padding: 1rem;
+  border: 1px solid var(--border-color);
+  border-radius: 0.5rem;
+  background-color: var(--card-color);
+  color: var(--text-color);
+  font-size: clamp(1.4rem, 2vw, 1.6rem) 90;
+  transition: box-shadow 0.2s ease-in-out;
+  box-shadow: var(--box-shadow);
+}
+.form__group input:not([type=checkbox]):focus,
+.form__group textarea:focus,
+.form__group select:focus {
+  outline: none;
+  border-color: var(--primary-color);
+  box-shadow: var(--box-shadow-focus);
+}
+.form__group textarea {
+  resize: none;
+  height: 10rem;
+  font-family: inherit;
+}
+.form__group textarea:disabled {
+  background-color: var(--disabled-color);
+}
+.form__group input[type=checkbox] {
+  width: auto;
+  margin-right: 0.5rem;
+}
+.form__group input[type=date] {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+.form .actions {
+  margin-top: 2rem;
+  margin-bottom: 5rem;
+  display: flex;
+  width: 100%;
+  grid-column: 2;
+}
+.form .actions > * {
+  flex: 1;
+}
+.form .actions > *:first-child {
+  margin-right: 1rem;
+}
+
+@media (min-width: 768px) {
+  .form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    -moz-column-gap: clamp(4rem, 5vw, 6rem);
+         column-gap: clamp(4rem, 5vw, 6rem);
+    row-gap: clamp(1.5rem, 2vw, 2rem);
+  }
+  .form__group {
+    margin-bottom: 0;
+  }
+}
+@media (min-width: 1025px) {
+  .form .actions {
+    width: unset;
+    justify-content: flex-end;
+  }
+  .form .actions > * {
+    flex: unset;
+  }
+}
 .logo {
   font-size: 1.2rem;
   text-align: center;
@@ -520,86 +602,7 @@ p {
 .add-reservation__header {
   margin-bottom: 2rem;
 }
-.add-reservation__form__group {
-  margin-bottom: 1rem;
-}
-.add-reservation__form__group label {
-  display: block;
-  margin-bottom: 0.5rem;
-  font-size: clamp(1.4rem, 2vw, 1.6rem);
-  font-weight: bold;
-  color: var(--text-color);
-}
-.add-reservation__form__group input:not([type=checkbox]),
-.add-reservation__form__group textarea,
-.add-reservation__form__group select {
-  width: 100%;
-  padding: 1rem;
-  border: 1px solid var(--border-color);
-  border-radius: 0.5rem;
-  background-color: var(--card-color);
-  color: var(--text-color);
-  font-size: clamp(1.4rem, 2vw, 1.6rem) 90;
-  transition: box-shadow 0.2s ease-in-out;
-  box-shadow: var(--box-shadow);
-}
-.add-reservation__form__group input:not([type=checkbox]):focus,
-.add-reservation__form__group textarea:focus,
-.add-reservation__form__group select:focus {
-  outline: none;
-  border-color: var(--primary-color);
-  box-shadow: var(--box-shadow-focus);
-}
-.add-reservation__form__group textarea {
-  resize: none;
-  height: 10rem;
-  font-family: inherit;
-  background-color: var(--disabled-color);
-}
-.add-reservation__form__group input[type=checkbox] {
-  width: auto;
-  margin-right: 0.5rem;
-}
-.add-reservation__form__group input[type=date] {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-}
-.add-reservation__form .actions {
-  margin-top: 2rem;
-  margin-bottom: 5rem;
-  display: flex;
-  width: 100%;
-  grid-column: 2;
-}
-.add-reservation__form .actions > * {
-  flex: 1;
-}
-.add-reservation__form .actions > *:first-child {
-  margin-right: 1rem;
-}
 
-@media (min-width: 768px) {
-  .add-reservation__form {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    -moz-column-gap: clamp(4rem, 5vw, 6rem);
-         column-gap: clamp(4rem, 5vw, 6rem);
-    row-gap: clamp(1.5rem, 2vw, 2rem);
-  }
-  .add-reservation__form__group {
-    margin-bottom: 0;
-  }
-}
-@media (min-width: 1025px) {
-  .add-reservation__form .actions {
-    width: unset;
-    justify-content: flex-end;
-  }
-  .add-reservation__form .actions > * {
-    flex: unset;
-  }
-}
 .rooms {
   padding-bottom: 10rem;
 }
@@ -704,6 +707,10 @@ p {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
+.add-customer__header {
+  margin-bottom: 2rem;
+}
+
 .account {
   padding-bottom: 10rem;
 }
