--- a/styles/reservations/_single.scss
+++ b/styles/reservations/_single.scss
@@ -11,8 +11,12 @@
       }
     }
     > * {
-      margin-right: 1rem;
+      margin-right: 0.5rem;
     }
+  }
+
+  &__title {
+    font-size: 2.5rem;
   }
 
   &__content {
